# humanice

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
humanice/: __init__.py  filesize.py  i18n.py  number.py  time.py
humanice/locale/de_DE/LC_MESSAGES/: humanice.mo  humanice.po
humanice/locale/fi_FI/LC_MESSAGES/: humanice.po
humanice/locale/fr_FR/LC_MESSAGES/: humanice.mo  humanice.po  humanize.po
humanice/locale/id_ID/LC_MESSAGES/: humanice.po
humanice/locale/it_IT/LC_MESSAGES/: humanice.po
humanice/locale/ja_JP/LC_MESSAGES/: humanice.po
humanice/locale/ko_KR/LC_MESSAGES/: humanice.po
humanice/locale/nl_NL/LC_MESSAGES/: humanice.po
humanice/locale/pt_BR/LC_MESSAGES/: humanice.po
humanice/locale/ru_RU/LC_MESSAGES/: humanice.po
humanice/locale/sk_SK/LC_MESSAGES/: humanice.po  humanize.po
humanice/locale/tr_TR/LC_MESSAGES/: humanice.po
humanice/locale/vi_VI/LC_MESSAGES/: humanice.po
humanice/locale/zh_CN/LC_MESSAGES/: humanice.po  humanize.po
humanize/: number.py
humanize/locale/zh_CN/LC_MESSAGES/: humanize.mo
tests/: base.py  filesize.py  number.py  test_filesize.py  test_i18n.py  test_number.py  test_time.py  time.py
