[tool.poetry]
name = "humanice"
version = "1.0.0"
description = "Nice humanize functions for Python"
authors = ["Tim Wedde <timwedde@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
flake8 = "^3.7"
codecov = "^2.0"
pytest = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
