[tool.poetry]
name = "humanice"
version = "1.0.4"
description = "Nice humanize functions for Python"
authors = ["Tim Wedde <timwedde@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timwedde/humanice"
homepage = "https://github.com/timwedde/humanice"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.1"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
